--- a/package.json
+++ b/package.json
@@ -14,20 +14,29 @@
 		"@emotion/styled": "^11.10.0",
 		"@mui/icons-material": "^5.8.4",
 		"@mui/material": "^5.9.3",
+		"axios": "^0.27.2",
+		"bcryptjs": "^2.4.3",
 		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^6.5.1",
+		"mongoose-type-email": "^1.1.2",
 		"next": "12.2.4",
 		"passport": "^0.5.2",
 		"passport-jwt": "^4.0.0",
+		"passport-local": "^1.0.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"sass": "^1.54.0"
+		"sass": "^1.54.0",
+		"yup": "^0.32.11"
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.3.0",
+		"@types/bcryptjs": "^2.4.2",
 		"@types/jsonwebtoken": "^8.5.8",
 		"@types/node": "18.6.4",
 		"@types/passport": "^1.0.9",
+		"@types/passport-jwt": "^3.0.6",
+		"@types/passport-local": "^1.0.34",
 		"@types/react": "18.0.17",
 		"@types/react-dom": "18.0.6",
 		"eslint": "8.21.0",
