--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"mongoose": "^6.5.1",
 		"mongoose-type-email": "^1.1.2",
 		"next": "12.2.4",
+		"next-auth": "^4.10.3",
 		"passport": "^0.5.2",
 		"passport-jwt": "^4.0.0",
 		"passport-local": "^1.0.0",
