--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
 		"bcryptjs": "^2.4.3",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.5.1",
-		"mongoose-type-email": "^1.1.2",
 		"next": "12.2.4",
 		"next-auth": "^4.10.3",
 		"passport": "^0.5.2",
@@ -27,6 +26,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"sass": "^1.54.0",
+		"validator": "^13.7.0",
 		"yup": "^0.32.11"
 	},
 	"devDependencies": {
@@ -40,6 +40,7 @@
 		"@types/passport-local": "^1.0.34",
 		"@types/react": "18.0.17",
 		"@types/react-dom": "18.0.6",
+		"@types/validator": "^13.7.5",
 		"eslint": "8.21.0",
 		"eslint-config-next": "12.2.4",
 		"jest": "^28.1.3",
