--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"sass": "^1.54.0",
+		"use-local-storage": "^2.3.6",
 		"validator": "^13.7.0",
 		"yup": "^0.32.11"
 	},
