--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@mui/material": "^5.9.3",
 		"axios": "^0.27.2",
 		"bcryptjs": "^2.4.3",
+		"formidable-serverless": "^1.1.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.5.1",
 		"next": "12.2.4",
